--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "winzou/state-machine": "^0.4.0"
+        "winzou/state-machine": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -18,7 +18,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/sebdesign/state-machine"
+            "url": "https://github.com/chriswest101/state-machine"
         }
     ],
     "extra": {
